--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "app.js",
+  "name": "Employee Summary Template",
   "version": "1.0.0",
   "description": "Team generator command line application; when the user has completed building the team, the application will create an HTML file that displays a nicely formatted team roster based on the information provided by the user",
   "main": "app.js",
@@ -16,7 +16,7 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/kmsaunders7/Employee-Summary-Template/issues"
   },
